# PaddleOCR

./: pyproject.toml
ppocr/data/: simple_dataset.py
ppocr/modeling/backbones/: rec_pphgnetv2.py  rec_svtrnet.py
