[build-system]
requires = ["setuptools==72.1.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr"
# After each version release, the version number needs to be incremented
dynamic = ["version"]
description = "Awesome multilingual OCR and document parsing toolkits based on PaddlePaddle"
authors = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
maintainers = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
readme = "README.md"
requires-python = ">=3.8.1"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
    "chineseocr",
    "pp-ocr",
    "pp-structure",
    "document-parsing",
    "pdf2markdown",
    "kie",
    "pp-chatocr",
    "document-translation",
    "rag"
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "albucore>=0.0.17",
    "albumentations>=1.4.18",
    "cython>=3.2.1",
    "lmdb>=1.7.5",
    "numpy>=1.24.4",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.11.0.86",
    "packaging>=24.2",
    "paddlex[ocr-core]>=3.3.0,<3.4.0",
    "pillow>=10.4.0",
    "pyclipper>=1.3.0.post6",
    "pyyaml>=6",
    "rapidfuzz>=3.9.7",
    "requests",
    "scikit-image>=0.21.0",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12",
]

[project.urls]
homepage = "https://github.com/PaddlePaddle/PaddleOCR"
documentation = "https://github.com/PaddlePaddle/PaddleOCR/blob/main/README.md"
repository = "https://github.com/PaddlePaddle/PaddleOCR.git"
issues = "https://github.com/PaddlePaddle/PaddleOCR/issues"

[project.scripts]
paddleocr = "paddleocr.__main__:console_entry"

[project.optional-dependencies]
doc-parser = ["paddlex[ocr,genai-client]>=3.3.0,<3.4.0"]
ie = ["paddlex[ie]>=3.3.0,<3.4.0"]
trans = ["paddlex[trans]>=3.3.0,<3.4.0"]
all = ["paddlex[ocr,genai-client,ie,trans]>=3.3.0,<3.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paddleocr", "paddleocr.*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'

[tool.pytest.ini_options]
markers = [
    "resource_intensive: mark a test as resource intensive"
]
addopts = "-m 'not resource_intensive'"

[tool.uv.sources]
paddlex = { git = "https://github.com/clc-hcmus-edu-vn/PaddleX.git", rev = "release/3.3" }
